@@ -1,3 +1,12 @@
+2009-07-16  Yong Li  <yong.li@torchmobile.com>
+
+         Reviewed by George Staikos.
+
+         https://bugs.webkit.org/show_bug.cgi?id=27320
+         _countof is only included in CE6; for CE5 we need to define it ourself
+
+         * wtf/Platform.h:
+
 2009-07-16  Zoltan Herczeg  <zherczeg@inf.u-szeged.hu>
 
         Reviewed by Oliver Hunt.
